## receiver/Makefile.am

## Convinience library:
noinst_LTLIBRARIES = libreceiver.la
libreceiver_la_SOURCES = ChannelFrequencyTable.cpp ChannelFrequencyTable.hpp \
			 Frequencies.cpp Frequencies.hpp \
			 GeneralEvents.hpp \
			 MediaReceiver.cpp MediaReceiver.hpp \
			 TunerFacade.cpp TunerFacade.hpp
libreceiver_la_CXXFLAGS = -std=c++0x
