## recorder/Makefile.am

## Convinience library:
noinst_LTLIBRARIES = librecorder.la
librecorder_la_SOURCES = GeneralEvents.hpp \
			 MediaRecorder.cpp MediaRecorder.hpp \
			 PvrProtocol.cpp PvrProtocol.hpp \
			 RecorderAdapter.cpp RecorderAdapter.hpp \
			 Recorder.cpp Recorder.hpp
librecorder_la_CXXFLAGS = -std=c++0x
