## deinterlacer/plugins/Makefile.am

## Convinience library:
noinst_LTLIBRARIES    = libdeinterlacerplugins.la
libdeinterlacerplugins_la_SOURCES = greedy.c  greedyh.cpp  kdetv_greedyh.c  kdetv_tomsmocomp.c  linearblend.c  linear.c  scalerbob.c  tomsmocomp.cpp  vfir.c  weavebff.c  weave.c  weavetff.c
libdeinterlacerplugins_la_CPPFLAGS = -I../src
