## deinterlacer/plugins/Makefile.am

## Convinience library:
noinst_LTLIBRARIES = libdeinterlacerplugins.la
libdeinterlacerplugins_la_SOURCES = dscalerapi.h \
				    greedyh.asm \
				    greedy.c \
				    greedyh.cpp greedyh.h \
				    greedyhmacros.h \
				    kdetv_greedyh.c \
				    kdetv_tomsmocomp.c \
				    linearblend.c \
				    linear.c \
				    x86-64_macros.inc \
				    plugins.h \
				    scalerbob.c \
				    tomsmocomp.cpp tomsmocomp.h \
				    vfir.c \
				    weavebff.c \
				    weave.c \
				    weavetff.c
libdeinterlacerplugins_la_CPPFLAGS = -I../src

EXTRA_DIST = tomsmocomp
